<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    tools:context=".LoginFragment">


    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/banner"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <FrameLayout
        android:id="@id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                android:layout_marginTop="@dimen/top"
                android:layout_marginHorizontal="@dimen/hor"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/banner" />


            <Button
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/login_logo"
                app:layout_constraintBottom_toTopOf="@id/copyright"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/sign_in_with_google"
                style="@style/login_button"/>


            <TextView
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/only_uth"
                android:layout_marginTop="@dimen/def"
                app:layout_constraintTop_toBottomOf="@id/signin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/small"/>


            <TextView
                android:id="@+id/copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyright"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/def"
                style="@style/small"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
